- ArnoldLight : Fixed a bug that prevented OSL shaders being used with Arnold lights.
- GraphEditor : Fixed several bugs and a crash that could occur when a parent of the editor's root node was changed or deleted.
- ImageReader : Fixed bug which meant that changes to the default format were not respected.
- UVInspector : Fixed bug which prevented alternative UV sets from being viewed.

0.54.2.1 (relative to 0.54.2.0)
========

Fixes
-----

- UIEditor : Fixed bugs which prevented node colour from being edited (#3383, #3384, #3385).
- Encapsulate : Fixed concurrent access to signals that could cause crashes at render time
  (#3381).
- Layouts : Fixed bug in `editor()` method (#3395).
- TBB : Fixed an obscure context management bug involving older TBB versions in custom Gaffer builds (#3409).
- NodeSetEditor : Fixed circular references for linked editors (#3421).
- Added support for loading files saved in Gaffer 0.55 (#3415). Note that because version 0.54
  does not support multiple child inputs on the Parent node, only the first child input will
  be loaded.

0.54.2.0 (relative to 0.54.1.0)
========

Features
--------

- Shaders : Added support for attribute substitutions in all string shader parameters.
  Tokens of the form `<attr:attributeName>` will be automatically substituted with the
  value of `attributeName` at render time. We recommend using this mechanism for passing
  texture paths to shaders, while allowing the paths to be modified independently of the
  shaders themselves (via a CustomAttribute node) (#3331).

  > Note : This mechanism uses the same syntax as Arnold's native attribute substitutions,
  > meaning that substitutions now occur in Gaffer before reaching Arnold.

Improvements
------------

- ShaderTweaks : Added `ignoreMissing` plug that suppresses the error that would normally
  occur for an attempt to tweak a parameter that doesn't exist (#3353).
- ImageTransform : Added `invert` plug (#3371).
- Layouts (#3323) :