@@ -12,6 +12,7 @@ Fixes
 - GraphEditor : Fixed several bugs and a crash that could occur when a parent of the editor's root node was changed or deleted.
 - ImageReader : Fixed bug which meant that changes to the default format were not respected.
 - UVInspector : Fixed bug which prevented alternative UV sets from being viewed.
+- SceneInspector : Fixed bug comparing objects where a particular primitive variable existed on only one of the objects (#3432).
 
 0.54.2.1 (relative to 0.54.2.0)
 ========
